--- a/css/styles.css
+++ b/css/styles.css
@@ -76,6 +76,254 @@ color: #e10600;
   background: #ffee00;
 }
 
+.driver-header-george {
+  width: 100%;
+  height: 90vh; /* adjust until image looks right */
+  background-image: url('../images/GeorgeRussellDriverProfileImage2.png');
+  background-size: cover;
+  background-position: center 20%; /* lifts image up and reduces apparent zoom */
+  background-repeat: no-repeat;
+  border-radius: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end; /* pushes content to the bottom */
+  padding-bottom: 60px;      /* spacing from bottom */
+  margin-top: 20px;
+}
+.driver-header-charles {
+  width: 100%;
+  height: 100vh; /* adjust until image looks right */
+  background-image: url('../images/CharlesLeclercDriverPageImage2.png');
+  background-size: cover;
+  background-position: center 20%; /* lifts image up and reduces apparent zoom */
+  background-repeat: no-repeat;
+  border-radius: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end; /* pushes content to the bottom */
+  padding-bottom: 60px;      /* spacing from bottom */
+  margin-top: 20px;
+}
+.driver-header-lewis {
+  width: 100%;
+  height: 100vh; /* adjust until image looks right */
+  background-image: url('../images/LewisHamiltonChinaImage.png');
+  background-size: cover;
+  background-position: center 20%; /* lifts image up and reduces apparent zoom */
+  background-repeat: no-repeat;
+  border-radius: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end; /* pushes content to the bottom */
+  padding-bottom: 60px;      /* spacing from bottom */
+  margin-top: 20px;
+}
+.driver-header-isack {
+  width: 100%;
+  height: 100vh; /* adjust until image looks right */
+  background-image: url('../images/IsackHadjarDriverProfileImage3.png');
+  background-size: cover;
+  background-position: center 20%; 
+  background-repeat: no-repeat;
+  border-radius: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end; 
+  padding-bottom: 60px;      
+  margin-top: 20px;
+}
+.driver-header-max {
+  width: 100%;
+  height: 120vh; 
+  background-image: url('../images/MaxVerstappenDriverProfileImage4.png');
+  background-size: cover;
+  background-position: center 20%; 
+  background-repeat: no-repeat;
+  border-radius: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end; 
+  padding-bottom: 60px;      
+  margin-top: 20px;
+}
+.driver-header-lando {
+  width: 100%;
+  height: 100vh; /* adjust until image looks right */
+  background-image: url('../images/LandoNorrisTitleImage2.png');
+  background-size: cover;
+  background-position: center 20%; 
+  background-repeat: no-repeat;
+  border-radius: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end; 
+  padding-bottom: 60px;      
+  margin-top: 20px;
+}
+.driver-header-alex {
+  width: 100%;
+  height: 104vh; /* adjust until image looks right */
+  background-image: url('../images/AlexAlbonDriverProfileImage3.png');
+  background-size: cover;
+  background-position: center 20%; 
+  background-repeat: no-repeat;
+  border-radius: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end; 
+  padding-bottom: 60px;      
+  margin-top: 20px;
+}
+.driver-header-carlos {
+  width: 100%;
+  height: 100vh; /* adjust until image looks right */
+  background-image: url('../images/CarlosSainzDriverProfilleImage3.png');
+  background-size: cover;
+  background-position: center 20%; 
+  background-repeat: no-repeat;
+  border-radius: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end; 
+  padding-bottom: 60px;      
+  margin-top: 20px;
+  color: #00103d;
+}
+.driver-basic-info {
+  position:inherit;
+  z-index: 1; /* keep text above overlay */
+  color: rgb(231, 229, 229);
+  text-align: center;
+}
+.quick-stats {
+    text-align: center;
+    margin: 20px;
+}
+.team-header-mclaren{
+  width: 100%;
+  height: 120vh; /* adjust until image looks right */
+  background-image: url('../images/McLarenTeamPageImage.png');
+  background-size: cover;
+  background-position: center 20%; /* lifts image up and reduces apparent zoom */
+  background-repeat: no-repeat;
+  border-radius: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end; /* pushes content to the bottom */
+  padding-bottom: 60px;      /* spacing from bottom */
+  margin-top: 20px;
+  text-align: center;
+}
+.team-header-mercedes{
+  width: 100%;
+  height: 90vh; /* adjust until image looks right */
+  background-image: url('../images/MercedesTeamPageImage.png');
+  background-size: cover;
+  background-position: center 20%; /* lifts image up and reduces apparent zoom */
+  background-repeat: no-repeat;
+  border-radius: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end; /* pushes content to the bottom */
+  padding-bottom: 60px;      /* spacing from bottom */
+  margin-top: 20px;
+  text-align: center;
+  color: #ffffff;
+}
+.team-header-ferrari{
+  width: 100%;
+  height: 120vh; /* adjust until image looks right */
+  background-image: url('../images/FerrariTeamPageImage.png');
+  background-size: cover;
+  background-position: center 20%; /* lifts image up and reduces apparent zoom */
+  background-repeat: no-repeat;
+  border-radius: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end; /* pushes content to the bottom */
+  padding-bottom: 60px;      /* spacing from bottom */
+  margin-top: 20px;
+  text-align: center;
+}
+.team-header-alpine{
+  width: 100%;
+  height: 100vh; /* adjust until image looks right */
+  background-image: url('../images/AlpineTeamHomeImage.png');
+  background-size: cover;
+  background-position: center 20%; /* lifts image up and reduces apparent zoom */
+  background-repeat: no-repeat;
+  border-radius: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end; /* pushes content to the bottom */
+  padding-bottom: 60px;      /* spacing from bottom */
+  margin-top: 20px;
+  text-align: center;
+}
+.team-header-astonmartin{
+  width: 100%;
+  height: 100vh; /* adjust until image looks right */
+  background-image: url('../images/AstonMartinTeamImage.png');
+  background-size: cover;
+  background-position: center 20%; /* lifts image up and reduces apparent zoom */
+  background-repeat: no-repeat;
+  border-radius: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end; /* pushes content to the bottom */
+  padding-bottom: 60px;      /* spacing from bottom */
+  margin-top: 20px;
+  text-align: center;
+}
+.team-header-cadillac{
+  width: 100%;
+  height: 100vh; /* adjust until image looks right */
+  background-image: url('../images/CadillacTeamImage.png');
+  background-size: cover;
+  background-position: center 20%; /* lifts image up and reduces apparent zoom */
+  background-repeat: no-repeat;
+  border-radius: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end; /* pushes content to the bottom */
+  padding-bottom: 60px;      /* spacing from bottom */
+  margin-top: 20px;
+  text-align: center;
+}
+.team-header-redbull{
+  width: 100%;
+  height: 110vh; /* adjust until image looks right */
+  background-image: url('../images/RedBullTeamImage.png');
+  background-size: cover;
+  background-position: center 20%; /* lifts image up and reduces apparent zoom */
+  background-repeat: no-repeat;
+  border-radius: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end; /* pushes content to the bottom */
+  padding-bottom: 60px;      /* spacing from bottom */
+  margin-top: 20px;
+  text-align: center;
+  color: #00103d;
+}
+.team-header-williams{
+  width: 100%;
+  height: 110vh; /* adjust until image looks right */
+  background-image: url('../images/WilliamsTeamImage.png');
+  background-size: cover;
+  background-position: center 20%; /* lifts image up and reduces apparent zoom */
+  background-repeat: no-repeat;
+  border-radius: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end; /* pushes content to the bottom */
+  padding-bottom: 60px;      /* spacing from bottom */
+  margin-top: 20px;
+  text-align: center;
+  color: #ffffff;
+}
+
+
 /* Cards Section */
 .cards-section {
 display: flex;
