--- a/css/styles.css
+++ b/css/styles.css
@@ -322,6 +322,38 @@ color: #e10600;
   text-align: center;
   color: #ffffff;
 }
+.team-header-racingbulls{
+  width: 100%;
+  height: 97vh; /* adjust until image looks right */
+  background-image: url('../images/RacingBullsTeamImage.png');
+  background-size: cover;
+  background-position: center 20%; /* lifts image up and reduces apparent zoom */
+  background-repeat: no-repeat;
+  border-radius: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end; /* pushes content to the bottom */
+  padding-bottom: 60px;      /* spacing from bottom */
+  margin-top: 20px;
+  text-align: center;
+  color: #ffffff;
+}
+.team-header-haas{
+  width: 100%;
+  height: 97vh; /* adjust until image looks right */
+  background-image: url('../images/HaasTeamImage.png');
+  background-size: cover;
+  background-position: center 20%; /* lifts image up and reduces apparent zoom */
+  background-repeat: no-repeat;
+  border-radius: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end; /* pushes content to the bottom */
+  padding-bottom: 60px;      /* spacing from bottom */
+  margin-top: 20px;
+  text-align: center;
+  color: #4d0101;
+}
 
 
 /* Cards Section */
